# ipc-benchmarks

./: .gitignore  README.md  analyze.py  condvar_same  generate_all_flamegraphs.bash  generate_flamegraph.sh  generate_graph.py  graphing.ipynb  ipc_atomic_spin.c  ipc_atomic_spin.h  ipc_atomic_yield.c  ipc_atomic_yield.h  ipc_condvar.c  ipc_futex.c  ipc_futex.h  ipc_pipe.c  ipc_pipe.h  ipc_posix_mq.c  ipc_posix_mq.h  ipc_posix_sema.c  ipc_posix_sema.h  ipc_runner.h  ipc_socket.c  ipc_sv_mq.c  ipc_sv_mq.h  ipc_sv_sema.c  ipc_sv_sema.h  meson.build  run_benchmark.py  runner.c  utils.c
.github/workflows/: github-action.yml  ipc-benchmark-github-action.yml
analysis/: analyze.py
bench/: analyze.py  function_call.c  graph.ipynb  ipc_bench.h  ipc_cv.c  ipc_mmap_cv.c  ipc_mmap_mutex.c  ipc_mmap_sema.c  ipc_pipe.c  ipc_socket.c  times_function_call.data  times_ipc_cv.data
framework/: ipc_atomic.c  ipc_atomic.h  ipc_atomic_yield.c  ipc_condvar.c  ipc_condvar.h  ipc_futex.c  ipc_futex.h  ipc_pipe.c  ipc_pipe.h  ipc_runner.h  ipc_socket.c  ipc_socket.h  output.txt  runner.c  tem
framework/_outputs/: output2.txt  output3.txt  output4.txt
misc/: function_call.c  ipc_bench.h  ipc_mmap_cv.c  ipc_mmap_sema.c
perf-tests/: perf_bench.ipynb
